--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -42,15 +42,18 @@
     ~/.config/nextjs-nodejs: dev/nextjs-nodejs
 
     ## Vscode
-    ~/.config/Code/Preferences: dev/Code/Preferences
-    ~/.config/Code/User/tasks.json: dev/Code/tasks.json
+    ~/.config/Code/Preferences: 
+      path: dev/Code/Preferences
+      create: true
+
+    ~/.config/Code/User/tasks.json: 
+      path: dev/Code/tasks.json
+      create: true
     ~/.config/Code/User/settings.json: dev/Code/settings.json
     ~/.config/Code/User/keybindings.json: dev/Code/keybindings.json
     ~/.config/Code/User/snippets: dev/Code/snippets
 
 - create:
-    - ~/downloads
-    - ~/.config/Code/User
     - ~/.vim/undo-history
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
