Adding rust and mocword installation

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -76,3 +76,5 @@
     - [scripts/deno.sh, Installing Deno]
     - [scripts/nvm.sh, Installing NVM]
     - [scripts/ghcup.sh, Installing Ghcup]
+    - [scripts/rust.sh, Installing Rustup]
+    - [scripts/mocword.sh, Installing Mocword]
